Fixed extra padding around site

--- a/app/public/stylesheets/style.css
+++ b/app/public/stylesheets/style.css
@@ -5,14 +5,6 @@
  *
  * Made By MaterializeCSS.com
  */
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
-}
 nav ul a,
 nav .brand-logo {
   color: #444;
